// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkScrollableCalendarDate should pass props through to button 1`] = `
<DocumentFragment>
  <button
    aria-label="Nothing happened on this day in 2010"
    aria-pressed="false"
    class="bpk-calendar-date"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkScrollableCalendarDate should render a disabled button 1`] = `
<DocumentFragment>
  <button
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkScrollableCalendarDate should render a focused button with tabIndex 1`] = `
<DocumentFragment>
  <button
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date bpk-calendar-date--focused"
    tabindex="0"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkScrollableCalendarDate should render correctly 1`] = `
<DocumentFragment>
  <button
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkScrollableCalendarDate should render with a click and keyDown handler 1`] = `
<DocumentFragment>
  <button
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkScrollableCalendarDate should return null when isOutside is true 1`] = `<DocumentFragment />`;
